2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Implement authentication for EpcPublisher and EpcConsumer.

	* examples/test-consumer.c: Demonstrate authentication callback.
	* examples/test-publisher.c: Demonstrate publishing of sensitive data.
	* libepc/consumer.c, libepc/consumer.h: Add "authenticate" signal.
	* libepc/marshal.list: Add marshaller for "authenticate" signal.
	* libepc/.gitignore: Add generated files marshal.c and marshal.h.
	* Makefile.am: Add marshal.c, marshal.h and code to generate them.
	* libepc/publisher.c, libepc/publisher.h: Implement authentication
	by adding epc_publisher_set_auth_handler and EpcAuthContext.

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Demonstrate epc_publisher_add_handler.

	* examples/test-publisher.c: Demonstrate epc_publisher_add_handler.

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Move examples into separate folder.

	* examples/.gitignore, Makefile.am, tests/.gitignore:
	Moved test-consumer and test-publisher from tests to examples.
	* tests/test-consumer.c, tests/test-publisher.c: Moved to examples.

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Document epc_publisher_add_handler and related API.

	* docs/reference/libepc/libepc-sections.txt:
	Rename EpcPublisherHandler to EpcContentHandler.
	* libepc/publisher.c: Document epc_publisher_add_handler
	and EpcContent with its methods.
	* libepc/publisher.h: Document EpcContentHandler.

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Implement epc_publisher_add_handler.
	Rewrite epc_publisher_add and epc_publisher_add_file to use it.

	* docs/reference/libepc/libepc-sections.txt, libepc/publisher.c,
	libepc/publisher.h: Add epc_publisher_add_handler and EpcContent.
	* tests/test-publisher.c: Remove obsolete error variable.

2007-11-04  Mathias Hasselmann  <mathias@openismus.com>

	Document the property accessors of EpcDispatcher.

	* docs/reference/libepc/libepc-sections.txt,