@@ -69,6 +69,13 @@ enum
   PROP_SERVICE
 };
 
+/**
+ * EpcAuthContext:
+ *
+ * This data structure describes a pending authentication request
+ * which shall be verified by an #EpcAuthHandler installed by
+ * #epc_publisher_set_auth_handler.
+ */
 struct _EpcAuthContext
 {
   SoupServerAuth *auth;
@@ -647,10 +654,12 @@ epc_publisher_add_file (EpcPublisher  *self,
  *
  * Publishes content on the #EpcPublisher which is generated by a custom
  * #EpcContentHandler. This is the most flexible method for publishing
- * information. The @handler is called on every request matching @key.
+ * information.
+ *
+ * The @handler is called on every request matching @key.
  * On this call @publisher, @key and @user_data are passed to the @handler.
- * When replacing or deleting this publication, the function described
- * by @destroy_data is called with @user_data as argument.
+ * When replacing or deleting the resource referenced by @key, the function
+ * described by @destroy_data is called with @user_data as argument.
  */
 void
 epc_publisher_add_handler (EpcPublisher      *self,
@@ -669,6 +678,23 @@ epc_publisher_add_handler (EpcPublisher      *self,
   g_hash_table_insert (self->priv->publications, g_strdup (key), publication);
 }
 
+/**
+ * epc_publisher_set_auth_handler:
+ * @publisher: a #EpcPublisher
+ * @key: the key of the resource to protect, or %NULL
+ * @handler: the #EpcAuthHandler to connect
+ * @user_data: data to pass on @handler calls
+ * @destroy_data: a function for releasing @user_data
+ *
+ * Installs an authentication handler for the specified @key.
+ * Passing %NULL as @key installs a fallback handler for all resources.
+ *
+ * The @handler is called on every request matching @key. On this call
+ * a temporary #EpcAuthContext and @user_data are passed to the @handler.
+ * The #EpcAuthContext references the @publisher and @key passed here.
+ * When replacing or deleting the resource referenced by @key, the function
+ * described by @destroy_data is called with @user_data as argument.
+ */
 void
 epc_publisher_set_auth_handler (EpcPublisher   *self,
                                 const gchar    *key,
@@ -811,6 +837,14 @@ epc_publisher_quit (EpcPublisher *self)
   soup_server_quit (self->priv->server);
 }
 
+/**
+ * epc_auth_context_get_publisher:
+ * @context: a #EpcAuthContext
+ *
+ * Queries the #EpcPublisher owning the authentication @context.
+ *
+ * Returns: The owning #EpcPublisher.
+ */
 EpcPublisher*
 epc_auth_context_get_publisher (EpcAuthContext *context)
 {
@@ -818,6 +852,14 @@ epc_auth_context_get_publisher (EpcAuthContext *context)
   return context->publisher;
 }
 
+/**
+ * epc_auth_context_get_key:
+ * @context: a #EpcAuthContext
+ *
+ * Queries the resource key assosiated with the authentication @context.
+ *
+ * Returns: The resource key.
+ */
 G_CONST_RETURN gchar*
 epc_auth_context_get_key (EpcAuthContext *context)
 {
@@ -825,6 +867,19 @@ epc_auth_context_get_key (EpcAuthContext *context)
   return context->key;
 }
 
+/**
+ * epc_auth_context_check_password:
+ * @context: a #EpcAuthContext
+ * @password: the expected password
+ *
+ * Verifies that the password passed with the authentication request described
+ * by @context matches the expected @password. The password cannot be verify
+ * directly (i.e. by <function>strcmp</function>) because the authentication
+ * mechanism sends hash codes ("fingerprints") instead of the actual password
+ * password.
+ *
+ * Returns: %TRUE when the sent password matches, or %FALSE otherwise.
+ */
 gboolean
 epc_auth_context_check_password (EpcAuthContext *context,
                                  const gchar    *password)
